--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
 
-        <canvas id="blueWave"></canvas>
 
 
 
 
 
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
+        <script src="js/blueWave.js"></script>
+        <script type="text/javascript">
+            var bluewave = new BlueWave({
+                //settings
+            });
+        </script>
+        
     </body>
 </html>
