--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
         <script src="js/blueWave.js"></script>
         <script type="text/javascript">
             var bluewave = new BlueWave({
