Nice on mobile settings (30,30 pixels)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     </head>
     <body>
 
+        
+        
+        <img src="img/1.jpg">
+        <img id="startImage" src="img/background.jpg">
 
 
 
