Added settings call

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="js/blueWave.js"></script>
         <script type="text/javascript">
             var bluewave = new BlueWave({
-                //settings
+                canvasTop: 0
             });
         </script>
         
