--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+        <script src="js/main.js"></script>
         <script src="js/blueWave.js"></script>
         <script type="text/javascript">
+            function start () {
+                console.log('start');
+            }
+
+            function middle () {
+                console.log('middle');
+            }
+
+            function end () {
+                console.log('end');
+            }
+
+
             var bluewave = new BlueWave({
                 canvasTop: 0
             });
 
-            function example () {
-                console.log("dope");
-            }
-
             document.getElementById('startImage').addEventListener('click', function() {
-                bluewave.start(example);
+                //function start, middle, end
+                bluewave.start(start, middle, end);
             })
 
             
