--- a/dev/index.html
+++ b/dev/index.html
@@ -13,10 +13,8 @@
     <body>
 
         
-        
+        <img id="endImage" src="img/1.jpg">
         <img id="startImage" src="img/background.jpg">
-
-
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
@@ -24,15 +22,19 @@
         <script src="js/blueWave.js"></script>
         <script type="text/javascript">
             function start () {
+                //preload next image
                 console.log('start');
             }
 
             function middle () {
+                //exchange content
                 console.log('middle');
+                document.getElementById('startImage').style.display = "none";
             }
 
             function end () {
-                console.log('end');
+                //end callback
+                console.log('end');     
             }
 
 
