--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
         <script src="js/blueWave.js"></script>
         <script type="text/javascript">
-            var bluewave = new BlueWave({
-                canvasTop: 0
+            var pixelwave = new BlueWave({
+                canvasTop: 50,
+                speedIn: 3,
+                speedOut: 1,
+                autoCalculateSquaresSize: true,
+                color: '#000000'
             });
 
             function example () {
